<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_home_fragment" />
        <item
            android:id="@+id/wishlistFragment"
            android:icon="@drawable/ic_menu_save"
            android:title="@string/wishlist" />
        <item
            android:id="@+id/barChartFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_bar_chart_fragment" />

        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile_fragment" />

        <item
            android:id="@+id/profileFragmentEdit"
            android:title="@string/menu_profile_fragment"
            android:visible="false"/>

        <item
            android:id="@+id/logoutFragment"
            android:title="@string/menu_logout" />

    </group>
</menu>